--- a/bsconfig.json
+++ b/bsconfig.json
@@ -3,7 +3,7 @@
   "bsc-flags": ["-bs-super-errors"],
   "reason": { "react-jsx": 2 },
   "refmt": 3,
-  "bs-dependencies": ["reason-react", "bs-react-native"],
+  "bs-dependencies": ["reason-react", "rebolt"],
   "namespace": true,
   "sources": {
     "dir": "src",
