--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "bugs": "https://github.com/fiber-god/reason-expo/issues",
   "peerDependencies": {
-    "bs-react-native": "^0.8.0",
+    "rebolt": "^0.2.0",
     "expo": "^29.0.0",
     "reason-react": "^0.4.2"
   }
